<resources>
    <string name="app_name">Dota2048</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="score">当前天梯分:</string>
    <string name="maxscore">最高天梯分:</string>
    <string name="Clear">清除记录</string>
    <string name="Re">重新匹配</string>
    <string name="CurL">当前技能等级：</string>
    <string name="SkiName">恩赐解脱</string>
    <string name="HeroStore">英雄商店</string>
    <string name="StartGame">普通模式</string>
    <string name="HardGame">困难模式</string>
    <string name="LoadGame">继续游戏</string>
    <string name="Bought">已&#160;购&#160;买</string>
    <string name="UnBought">购买</string>
    <string name="Use">启用</string>
    <string name="hero0">不使用英雄 No Hero</string>
    <string name="hero1">幻影刺客&#160;Phantom Assassin</string>
    <string name="hero2">编织者&#160;Weaver</string>
    <string name="hero3">莉娜&#160;Lina</string>
    <string name="hero4">复仇之魂\nVengeful Spirit</string>
    <string name="heroS1">幻影刺客</string>
    <string name="heroS2">编&#160;织&#160;者</string>
    <string name="heroS3">莉&#160;&#160;&#160;&#160;娜</string>
    <string name="heroS4">复仇之魂</string>
    <string name="intro1">拥有技能恩赐解脱，在每次合并时都有概率获得多倍得分</string>
    <string name="intro2">拥有技能时光倒流，可以回到几次操作之前的状态</string>
    <string name="intro3">拥有技能神灭斩，可以消除一个方块并获得一定的分值</string>
    <string name="intro4">拥有技能移形换位，可以交换两个方块的位置</string>
    <string name="tips0">点击开始最有挑战性的无技能模式</string>
    <string name="tips1">大喊"暴暴暴"来增加暴击概率</string>
    <string name="tips2">如果游戏结束了就不能用了，所以请提前使用</string>
    <string name="tips3">消除一个大块可以获得高分，但也会少一个高分的组件</string>
    <string name="tips4">交换有距离限制，注意是曼哈顿距离</string>
    <string name="price1">需要400金币</string>
    <string name="price2">需要900金币</string>
    <string name="price3">需要1600金币</string>
    <string name="price4">需要2500金币</string>
    <string name="chooseHero">英雄选择</string>
    <string name="PrePage">上页</string>
    <string name="NextPage">下页</string>
</resources>
