<?xml version="1.1" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:background="#818181"
    android:orientation="vertical"
    tools:context="com.example.yuqiaohe.Dota2048.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>
            <Button
                android:id="@+id/LoadGame"
                android:layout_width="match_parent"
                android:text="@string/LoadGame"
                android:layout_height="0dp"
                android:layout_weight="5">
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>
            <Button
                android:id="@+id/StartGame"
                android:text="@string/StartGame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                >
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>

            <Button
                android:id="@+id/HeroStore"
                android:text="@string/HeroStore"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                >
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>