<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:background="#818181"
    android:orientation="vertical"
    tools:context="com.example.yuqiaohe.Dota2048.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/maxscore"
                android:textColor="@color/scoreColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/maxScore"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/scoreColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxlevel"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/levelColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/clear"
                style="@android:style/Holo.Light.ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/Clear"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/scoreColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/scoreColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/level"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/levelColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_cx"
                style="@android:style/Holo.Light.ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/Re"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>

    <com.example.yuqiaohe.Dota2048.Activity.GameView
        android:id="@+id/gameView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/Skill"
                android:scaleType="fitXY"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/SkiName"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/intro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <ImageButton
                android:id="@+id/US"
                android:layout_width="80dp"
                android:layout_height="43dp"
                android:scaleType="centerCrop"
                android:background="#818181"
                android:src="@drawable/bt_1" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
            <ImageView
                android:src="@drawable/gold_1"
                android:layout_width="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/Gold"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

