<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <me.grantland.widget.AutofitTextView
                        android:id="@+id/StoreGold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:singleLine="true"
                        android:text="@string/chooseHero"
                        android:background="@drawable/vs_im_border"
                        android:textColor="@android:color/background_dark"
                        android:layout_weight="3"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Hero1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@color/vsColor"
                        android:cropToPadding="true"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hero_pa" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <me.grantland.widget.AutofitTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:singleLine="true"
                            android:padding="2dp"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:text="@string/hero1"
                            android:textSize="20sp" />

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/intro1"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:padding="2dp"
                            android:gravity="center"
                            android:text="@string/tips1"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:textSize="18sp"  />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Hero2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@color/vsColor"
                        android:cropToPadding="true"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hero_we" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <me.grantland.widget.AutofitTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="2dp"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:singleLine="true"
                            android:text="@string/hero2"
                            android:textSize="20sp" />

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/intro2"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="2dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:text="@string/tips2"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:textSize="18sp"  />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Hero3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@color/vsColor"
                        android:cropToPadding="true"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/hero_ln" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <me.grantland.widget.AutofitTextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:singleLine="true"
                            android:padding="2dp"
                            android:text="@string/hero3"
                            android:textSize="18sp" />

                        <me.grantland.widget.AutofitTextView
                            android:id="@+id/intro3"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:padding="2dp"
                            android:background="@drawable/vs_im_border"
                            android:textColor="@color/textColorOfVs"
                            android:textSize="18sp"
                            android:text="@string/tips3"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>